--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -104,6 +104,7 @@
     <script src="{% static "lib/app/common/controllers/DeleteEventCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/controllers/AlertsCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/controllers/EventListCtrl.js"%}"></script>
+    <script src="{% static "lib/app/common/controllers/ReservationCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/services/apiService.js"%}"></script>
     <script src="{% static "lib/app/common/services/CurrentUserService.js"%}"></script>
     <script src="{% static "lib/app/common/services/DateFormatService.js"%}"></script>
