--- a/static/lib/app/common/partials/new_list_modal.html
+++ b/static/lib/app/common/partials/new_list_modal.html
@@ -82,7 +82,7 @@
                             <div class="row" ng-repeat="gift in formData.gifts track by $index">
                                 <div class="col-xs-10">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" ng-keydown="initValidation('#eventForm')"
+                                        <input type="text" class="form-control"
                                                maxlength="50"
                                                placeholder="Nazwa produktu *"
                                                id="products-name-{$$index$}"
