--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -105,10 +105,12 @@
     <script src="{% static "lib/app/common/controllers/AlertsCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/controllers/EventListCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/controllers/ReservationCtrl.js"%}"></script>
+    <script src="{% static "lib/app/common/controllers/FriendsCtrl.js"%}"></script>
     <script src="{% static "lib/app/common/services/apiService.js"%}"></script>
     <script src="{% static "lib/app/common/services/CurrentUserService.js"%}"></script>
     <script src="{% static "lib/app/common/services/DateFormatService.js"%}"></script>
     <script src="{% static "lib/app/common/services/EventService.js"%}"></script>
+    <script src="{% static "lib/app/common/services/FrendsService.js"%}"></script>
     <script src="{% static "lib/app/common/directives/DateTimePicker.js"%}"></script>
 
 
